main/static/style.css
/* reset */
html {
    /* fix line height in all browsers */
    line-height: 1.15;
    /* prevent adjustments of font size after orientation changes in iOS */
    -webkit-text-size-adjust: 100%;
}

body {
    /* remove margin in all browsers */
    margin: 0;
}

hr {
    /* fix height in Firefox */
    height: 0;
    /* fix inheritance of border color in Firefox */
    color: inherit;
}

abbr[title] {
    /* fix text decoration in Chrome, Edge, Safari. */
    text-decoration: underline dotted;
}

b,
strong {
    /* fix font weight in Edge and Safari */
    font-weight: bolder;
}

code,
kbd,
samp,
pre {
    /* improve consistency of default fonts in all browsers */
    font-family: monospace;
    /* correct the odd 'em' font sizing in all browsers */
    font-size: 1em;
}

small {
    /* fix font size in all browsers */
    font-size: 80%;
}

/* prevent sub and sup from affecting the line height in all browsers */
sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sub {
    bottom: -0.25em;
}

sup {
    top: -0.5em;
}

table {
    /* remove text indentation from table contents in Chrome and Safari */
    text-indent: 0;
    /* fix table border color inheritance in Chrome and Safari */
    border-color: inherit;
}

button,
input,
optgroup,
select,
textarea {
    /* fix font styles in all browsers */
    font-family: inherit;
    font-size: 100%;
    line-height: 1.15;
    /* remove margin in Firefox and Safari */
    margin: 0;
}

button,
select {
    /* remove inheritance of text transform in Edge and Firefox */
    text-transform: none;
}

button,
[type='button'],
[type='reset'],
[type='submit'] {
    /* fix inability to style clickable types in iOS and Safari */
    -webkit-appearance: button;
}

/* remove inner border and padding in Firefox */
::-moz-focus-inner {
    border-style: none;
    padding: 0;
}

:-moz-focusring {
    /* restore focus styles unset by the previous rule */
    outline: 1px dotted ButtonText;
}

:-moz-ui-invalid {
    /* remove additional ':invalid' styles in Firefox */
    box-shadow: none;
}

progress {
    /* fix vertical alignment in Chrome and Firefox */
    vertical-align: baseline;
}

::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
    /* fix cursor style of increment and decrement buttons in Safari */
    height: auto;
}

[type='search'] {
    /* fix appearance in Chrome and Safari */
    -webkit-appearance: textfield;
    /* fix outline in Safari */
    outline-offset: -2px;
}

::-webkit-search-decoration {
    /* remove inner padding in Chrome and Safari on macOS */
    -webkit-appearance: none;
}

::-webkit-file-upload-button {
    /* fix inability to style clickable types in iOS and Safari */
    -webkit-appearance: button;
    /* change font properties to 'inherit' in Safari. */
    font: inherit;
}

summary {
    /* fix display in Chrome and Safari */
    display: list-item;
}

/* general */
:root {
    --serif-font: 'EB Garamond', serif;
    --link-color: #1175e2;
    --ascent-color: #006cdf;
    --grey-1-color: #353535;
    --grey-2-color: #646464;
    --grey-3-color: #8d8d8d;
    --grey-4-color: #bfbfbf;
    --grey-5-color: #f2f2f2;
    --highlight-color: rgba(255, 0, 0, 0.075);
}

/* dark mode
 * create and/or override colors */
@media (prefers-color-scheme: dark) {
    :root {
        --dark-mode-color: #212529;
        --link-color: #58a6ff;
        --grey-2-color: #888;
        --grey-3-color: #bdbdbd;
        --grey-5-color: #484848;
        --highlight-color: rgba(213, 23, 23, 0.85);
    }
}

body {
    font-family: var(--serif-font);
    font-size: 20px;
    line-height: 1.5;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 100vh;
    width: 100vw;
}
@media (prefers-color-scheme: dark) {
    body {
        color: #fff;
        background: var(--dark-mode-color);
    }
}
@media (max-width: 1000px) {
    body {
        grid-template-columns: 1fr;
        grid-template-rows: min-content;
    }
}

header {
    align-self: center;
    padding: 32px;
}
@media (max-width: 450px) {
    header {
        padding: 8px;
    }
}

main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(5, min-content);
    grid-column-gap: 32px;
    padding-right: 8px;
}
@media (max-width: 1600px) {
    main {
        grid-template-columns: 1fr;
    }
}
@media (max-width: 1000px) {
    main {
        padding-left: 8px;
        max-width: 560px;
        margin: 0 auto;
    }
}

#introduction {
    grid-row: 1;
    max-width: 600px;
}

#primarydetails {
    grid-row: 2/3;
    max-width: 600px;
}
@media (max-width: 1600px) {
    #primarydetails {
        grid-row: 3;
    }
}

#sidedetails {
    grid-column: 2;
    grid-row: 1/4;
}
@media (max-width: 1600px) {
    #sidedetails {
        grid-column: 1;
        grid-row: 2;
    }
}

p {
    margin: 16px 0;
}

a {
    text-decoration: none;
    color: var(--link-color);
}

a:hover {
    text-decoration: underline;
}

.muted-link {
    color: #000;
}
@media (prefers-color-scheme: dark) {
    .muted-link {
        color: #fff;
    }
}

h1 {
    font-size: 38px;
    font-weight: 400;
    line-height: 1.2;
    margin: 32px 0 0;
}

h2,
h3,
h4,
h5,
h6 {
    margin: 24px 0 0;
}

ul[role="navigation"] {
    margin: 32px auto 16px;
    width: 120px;
    list-style-type: decimal-leading-zero;
}
@media (max-height: 728px) {
    ul[role="navigation"] {
        display: grid;
        grid-template-columns: auto auto;
        width: 300px;
    }
}

ul,
ol {
    padding-left: 32px;
}

.nav-secondary {
    position: sticky;
    top: 96px;
    padding-left: 40px;
    list-style-type: lower-roman;
}

img {
    width: 100%;
}

article {
    margin-top: 32px;
}

aside {
    border: 3px dashed var(--grey-3-color);
    text-align: center;
    padding: 32px 0;
    margin: 32px 0;
}

form {
    margin: 16px 0;
}

label {
    display: block;
    margin-top: 16px;
}

input[type="text"],
input[type="email"],
input[type="password"] {
    width: 100%;
    margin-bottom: 8px;
    box-sizing: border-box;
    border: 5px solid var(--grey-5-color);
}
@media (prefers-color-scheme: dark) {
    input[type="text"],
    input[type="email"],
    input[type="password"] {
        color: #fff;
        background: var(--grey-1-color);
        border: 3px solid var(--grey-2-color);
    }
}

input[type="submit"] {
    display: block;
    border: 0;
    padding: 6px 16px;
    cursor: pointer;
    color: #000;
}

input[type="submit"]:hover {
    box-shadow: 8px 8px #000;
}

.inline {
    display: inline;
    margin: 0;
}

.inline input[type="submit"] {
    display: inline;
    padding: 0;
    background: inherit;
    color: var(--link-color);
}

.inline input[type="submit"]:hover {
    box-shadow: none;
    text-decoration: underline;
}

.btn-danger {
    background: var(--highlight-color);
}

textarea {
    width: 100%;
    box-sizing: border-box;
    border: 5px solid var(--grey-5-color);
}
@media (prefers-color-scheme: dark) {
    textarea {
        color: #fff;
        background: var(--grey-1-color);
        border: 3px solid var(--grey-2-color);
    }
}

time {
    color: var(--grey-3-color);
}

code {
    font-size: 16px;
    background: var(--grey-5-color);
}

pre {
    background: var(--grey-5-color);
    overflow: scroll;
}

blockquote {
    border-left: 12px solid var(--grey-5-color);
    padding-left: 16px;
    margin-left: 0;
}

hr {
    border-top: 1px solid var(--grey-4-color);
    border-bottom: 0;
}

/* landing page */
.logo {
    width: 128px;
    margin: 16px auto;
}

.logo a {
    opacity: 0.8;
}

.logo a:hover {
    opacity: 1;
}

.title {
    text-align: center;
    font-variant: small-caps;
    color: var(--grey-3-color);
}

.title:hover {
    text-decoration: none;
}

.title h1 {
    font-size: 48px;
    margin: 16px 0 0;
    line-height: 1.5;
    white-space: nowrap;
}

.title div {
    font-size: 48px;
    margin: 16px 0 0;
}

.subtitle {
    text-align: center;
    font-size: 24px;
    margin-bottom: 8px;
    color: var(--grey-2-color);
}

.subsubtitle {
    text-align: center;
    font-size: 20px;
    margin-bottom: 24px;
    color: var(--grey-3-color);
}

/* workshops */
.workshops-items {
    list-style-type: none;
    padding-left: 0;
}

.workshops-items-single a {
    display: block;
    padding: 8px;
    line-height: 1.3;
}

.workshops-items-single a:hover {
    text-decoration: none;
    background: var(--highlight-color) !important;
}

.workshops-items-single:nth-child(odd) a {
    background: var(--grey-5-color);
}

.workshops-items-single-byline time {
    font-family: monospace;
    font-size: 16px;
    color: var(--grey-3-color);
}

.workshops-item-single-byline-flag {
    color: #000;
    font-family: monospace;
    font-size: 15px;
    background: var(--highlight-color);
}

.workshops-single {
    max-width: 600px;
    margin-top: 0;
    word-wrap: break-word;
}

.workshops-single-tools {
    margin: 16px 0;
}

.workshops-datetime {
    display: inline-block;
    background: var(--highlight-color);
    margin-top: 8px;
    padding: 0 8px;
}

/* user profile */
.avatar > img {
    object-fit: cover;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin-top: 16px;
}

.profile-avatar {
    object-fit: cover;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin-top: 64px;
}

/* blog */
.blogposts-single {
    max-width: 600px;
    margin-top: 0;
}

.blogposts-metadata {
    color: var(--grey-3-color);
}

.blogposts-metadata a {
    color: var(--grey-3-color);
}

/* mentorships */
.mentorships-single {
    max-width: 600px;
    margin-top: 0;
}

.mentorships-profile-grid-avatar {
    object-fit: cover;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin-top: 16px;
}

.mentorships-profile-grid {
    display: grid;
    grid-template-columns: 100px auto;
}

.mentorships-profile-grid-text {
    padding-left: 16px;
    display: flex;
    align-items: center;
}

